--- a/Automark/Automark/CustomizePhotoViewController.xib
+++ b/Automark/Automark/CustomizePhotoViewController.xib
@@ -13,12 +13,12 @@
             <connections>
                 <outlet property="blueLabel" destination="fhp-28-4vy" id="Y65-xm-yAd"/>
                 <outlet property="blueSlider" destination="Y7n-Vl-DHP" id="mjA-tn-HR7"/>
+                <outlet property="borderBox" destination="s9N-qz-mqR" id="N4R-ah-qAS"/>
                 <outlet property="colorField" destination="egr-Qs-bWe" id="9Xo-Uy-a3h"/>
                 <outlet property="customImageView" destination="eOx-yI-Z7W" id="CxY-GN-OPv"/>
                 <outlet property="greenLabel" destination="KAF-7M-rDm" id="lfQ-K8-c21"/>
                 <outlet property="greenSlider" destination="Rhb-eW-cUb" id="V3Q-j3-T6r"/>
                 <outlet property="hexColorBox" destination="kii-4f-3tw" id="CBh-V4-cr4"/>
-                <outlet property="imageScrollView" destination="uXy-eq-NzO" id="vEU-NZ-ECJ"/>
                 <outlet property="redLabel" destination="bd4-DA-XaK" id="9Z6-oI-n89"/>
                 <outlet property="redSlider" destination="NGx-cX-VwI" id="5Jd-u9-CRC"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -104,57 +104,41 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.49019607843137253" green="0.49019607843137253" blue="0.49019607843137253" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Border Width" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s9N-qz-mqR">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Border Width" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="s9N-qz-mqR">
                     <rect key="frame" x="230" y="611" width="115" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
-                    <connections>
-                        <action selector="changeBorderWidth:" destination="-1" eventType="valueChanged" id="cYl-fz-7tY"/>
-                    </connections>
+                    <textInputTraits key="textInputTraits" autocorrectionType="yes" keyboardType="decimalPad" keyboardAppearance="alert"/>
                 </textField>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Hex Color Code" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kii-4f-3tw">
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Hex Color Code" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kii-4f-3tw">
                     <rect key="frame" x="102" y="610" width="115" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" keyboardAppearance="alert"/>
                     <connections>
-                        <action selector="renderHexColor:" destination="-1" eventType="valueChanged" id="1Mf-ne-cnG"/>
+                        <action selector="hexValueChanged:" destination="-1" eventType="valueChanged" id="Q3H-vu-Lnd"/>
                     </connections>
                 </textField>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uXy-eq-NzO">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eOx-yI-Z7W">
                     <rect key="frame" x="0.0" y="44" width="375" height="417"/>
-                    <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eOx-yI-Z7W">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="417"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="417" id="HKD-2S-P9L"/>
-                            </constraints>
-                        </imageView>
-                    </subviews>
                     <constraints>
-                        <constraint firstItem="eOx-yI-Z7W" firstAttribute="centerY" secondItem="uXy-eq-NzO" secondAttribute="centerY" id="7Og-tY-P2m"/>
-                        <constraint firstItem="eOx-yI-Z7W" firstAttribute="top" secondItem="uXy-eq-NzO" secondAttribute="top" id="8OT-g7-5DM"/>
-                        <constraint firstAttribute="trailing" secondItem="eOx-yI-Z7W" secondAttribute="trailing" id="IoZ-eJ-5GG"/>
-                        <constraint firstItem="eOx-yI-Z7W" firstAttribute="centerX" secondItem="uXy-eq-NzO" secondAttribute="centerX" id="Pmt-ej-DTJ"/>
-                        <constraint firstItem="eOx-yI-Z7W" firstAttribute="leading" secondItem="uXy-eq-NzO" secondAttribute="leading" id="XDN-hn-lhP"/>
-                        <constraint firstAttribute="bottom" secondItem="eOx-yI-Z7W" secondAttribute="bottom" id="eu2-qo-Syg"/>
+                        <constraint firstAttribute="height" constant="417" id="HKD-2S-P9L"/>
                     </constraints>
-                </scrollView>
+                </imageView>
             </subviews>
             <color key="backgroundColor" red="0.98823529409999999" green="0.53333333329999999" blue="0.6705882353" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="uXy-eq-NzO" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="3gS-9v-vJ3"/>
-                <constraint firstItem="hlO-wI-KXz" firstAttribute="trailing" secondItem="uXy-eq-NzO" secondAttribute="trailing" id="C3P-wD-hwe"/>
-                <constraint firstItem="hlO-wI-KXz" firstAttribute="leading" secondItem="uXy-eq-NzO" secondAttribute="leading" id="GJa-u2-lg6"/>
+                <constraint firstItem="eOx-yI-Z7W" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="4Pa-6Y-Q6D"/>
                 <constraint firstItem="pg4-55-yi3" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="JP3-6K-MZK"/>
                 <constraint firstItem="hlO-wI-KXz" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="KgU-t6-rno"/>
-                <constraint firstItem="pg4-55-yi3" firstAttribute="top" secondItem="uXy-eq-NzO" secondAttribute="bottom" id="M0O-OX-FDx"/>
+                <constraint firstItem="pg4-55-yi3" firstAttribute="top" secondItem="eOx-yI-Z7W" secondAttribute="bottom" id="Snf-Ng-D21"/>
+                <constraint firstItem="hlO-wI-KXz" firstAttribute="trailing" secondItem="eOx-yI-Z7W" secondAttribute="trailing" id="Vsz-wW-11j"/>
+                <constraint firstAttribute="trailing" secondItem="eOx-yI-Z7W" secondAttribute="trailing" id="cAR-4V-vTo"/>
+                <constraint firstItem="hlO-wI-KXz" firstAttribute="leading" secondItem="eOx-yI-Z7W" secondAttribute="leading" id="dB7-mE-A7k"/>
                 <constraint firstAttribute="trailing" secondItem="pg4-55-yi3" secondAttribute="trailing" id="eRC-y7-P8S"/>
-                <constraint firstItem="uXy-eq-NzO" firstAttribute="top" secondItem="hlO-wI-KXz" secondAttribute="bottom" id="lgK-kj-12e"/>
-                <constraint firstAttribute="trailing" secondItem="uXy-eq-NzO" secondAttribute="trailing" id="vt4-JM-og4"/>
+                <constraint firstItem="eOx-yI-Z7W" firstAttribute="top" secondItem="hlO-wI-KXz" secondAttribute="bottom" id="nIc-qe-fVM"/>
                 <constraint firstAttribute="bottom" secondItem="pg4-55-yi3" secondAttribute="bottom" id="yXj-Pc-vHq"/>
             </constraints>
             <point key="canvasLocation" x="33.5" y="91.5"/>
@@ -163,10 +147,6 @@
             <rect key="frame" x="0.0" y="0.0" width="118" height="31"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
         </slider>
-        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" id="Ch7-VC-1kB">
-            <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-        </activityIndicatorView>
     </objects>
     <resources>
         <image name="Folder" width="22" height="22"/>
