--- a/Automark/Automark/CustomizePhotoViewController.xib
+++ b/Automark/Automark/CustomizePhotoViewController.xib
@@ -40,6 +40,9 @@
                         </barButtonItem>
                         <barButtonItem image="Save" style="plain" id="Kne-8D-2v3">
                             <color key="tintColor" red="0.50196081400000003" green="0.25098040700000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="saveImage:" destination="-1" id="DR9-ES-E9A"/>
+                            </connections>
                         </barButtonItem>
                         <barButtonItem title="                                                        " id="jUO-aF-TAJ"/>
                         <barButtonItem systemItem="stop" id="9Jg-Nz-S3e">
@@ -144,7 +147,7 @@
             <point key="canvasLocation" x="33.5" y="91.5"/>
         </view>
         <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" id="nTB-lK-YP8">
-            <rect key="frame" x="0.0" y="0.0" width="118" height="31"/>
+            <rect key="frame" x="0.0" y="-1" width="118" height="31"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
         </slider>
     </objects>
