--- a/Automark/Automark/WatermarkViewController.xib
+++ b/Automark/Automark/WatermarkViewController.xib
@@ -13,6 +13,7 @@
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="waterImageView" destination="vvj-PQ-wDN" id="kTD-vU-QAr"/>
+                <outlet property="watermark" destination="0op-fm-Bhk" id="UCR-Cn-aib"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -35,7 +36,13 @@
                                 <action selector="saveImage:" destination="-1" id="WBF-8t-FRB"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem title="                                                           " id="nBe-QX-cn6"/>
+                        <barButtonItem image="Autograph" id="X4l-Ts-5hc">
+                            <color key="tintColor" red="0.50196081400000003" green="0.25098040700000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="addWatermark:" destination="-1" id="I5E-62-M8l"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem title="                                                    " id="nBe-QX-cn6"/>
                         <barButtonItem systemItem="stop" id="CxE-N7-HGj">
                             <color key="tintColor" red="0.50196081400000003" green="0.25098040700000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
@@ -54,6 +61,13 @@
                     <rect key="frame" x="0.0" y="461" width="375" height="206"/>
                     <color key="backgroundColor" red="1" green="0.81960784310000001" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" text="Sign Here" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0op-fm-Bhk">
+                    <rect key="frame" x="145" y="237" width="85" height="31"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                </textView>
             </subviews>
             <color key="backgroundColor" red="0.98823529409999999" green="0.53333333329999999" blue="0.6705882353" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
@@ -72,6 +86,7 @@
         </view>
     </objects>
     <resources>
+        <image name="Autograph" width="22" height="22"/>
         <image name="Folder" width="22" height="22"/>
         <image name="Save" width="22" height="22"/>
     </resources>
