--- a/Automark/Automark/WatermarkViewController.xib
+++ b/Automark/Automark/WatermarkViewController.xib
@@ -14,6 +14,7 @@
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="waterImageView" destination="vvj-PQ-wDN" id="kTD-vU-QAr"/>
                 <outlet property="watermark" destination="0op-fm-Bhk" id="UCR-Cn-aib"/>
+                <outlet property="watermarkText" destination="3go-5k-nMw" id="BID-f0-eHm"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -42,13 +43,7 @@
                                 <action selector="addWatermark:" destination="-1" id="I5E-62-M8l"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem image="Hand" id="iMd-Gx-wZF">
-                            <color key="tintColor" red="0.50196081400000003" green="0.25098040700000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            <connections>
-                                <action selector="moveWatermark:" destination="-1" id="Wvo-jd-un6"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem title="                                             " id="nBe-QX-cn6"/>
+                        <barButtonItem title="                                                   " id="nBe-QX-cn6"/>
                         <barButtonItem systemItem="stop" id="CxE-N7-HGj">
                             <color key="tintColor" red="0.50196081400000003" green="0.25098040700000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
@@ -65,10 +60,22 @@
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ev8-o8-iEP">
                     <rect key="frame" x="0.0" y="461" width="375" height="206"/>
+                    <subviews>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Write Your Watermark Text Here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3go-5k-nMw">
+                            <rect key="frame" x="8" y="8" width="359" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <action selector="changedWatermarkText:" destination="-1" eventType="valueChanged" id="dpv-91-IWE"/>
+                            </connections>
+                        </textField>
+                    </subviews>
                     <color key="backgroundColor" red="1" green="0.81960784310000001" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" text="Sign Here" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0op-fm-Bhk">
-                    <rect key="frame" x="145" y="237" width="85" height="31"/>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" text="Sign Here" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="0op-fm-Bhk">
+                    <rect key="frame" x="16" y="237" width="343" height="31"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -94,7 +101,6 @@
     <resources>
         <image name="Autograph" width="22" height="22"/>
         <image name="Folder" width="22" height="22"/>
-        <image name="Hand" width="22" height="22"/>
         <image name="Save" width="22" height="22"/>
     </resources>
 </document>
