--- a/Automark/Automark/WatermarkViewController.xib
+++ b/Automark/Automark/WatermarkViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WatermarkViewController">
             <connections>
+                <outlet property="hexColorField" destination="6ad-An-hjL" id="a1h-yK-QUc"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="waterImageView" destination="vvj-PQ-wDN" id="kTD-vU-QAr"/>
                 <outlet property="watermark" destination="0op-fm-Bhk" id="UCR-Cn-aib"/>
@@ -70,6 +71,13 @@
                             <connections>
                                 <action selector="changedWatermarkText:" destination="-1" eventType="valueChanged" id="dpv-91-IWE"/>
                             </connections>
+                        </textField>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Hex Color Code" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6ad-An-hjL">
+                            <rect key="frame" x="8" y="46" width="123" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
                         </textField>
                     </subviews>
                     <color key="backgroundColor" red="1" green="0.81960784310000001" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
